10_canary-release/10.2/recommendation-all.yaml
##################################################################################################
# Recommendation service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: recommendation
  labels:
    app: recommendation
    service: recommendation
spec:
  ports:
  - port: 3005
    name: http
  selector:
    app: recommendation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-v1
  labels:
    app: recommendation
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
      version: v1
  template:
    metadata:
      labels:
        app: recommendation
        version: v1
    spec:
      containers:
      - name: recommendation
        image: istioweather/recommendation:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3005
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation-dr 
spec:
  host: recommendation
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-route
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: v1
---
